Ensure error message is visible

--- a/client/src/common/message.module.css
+++ b/client/src/common/message.module.css
@@ -8,6 +8,7 @@
   top: 16px;
   right: 16px;
   width: 200px;
+  z-index: 9001 !important;
 }
 
 .error {
